# calculator

./: .clang-tidy  CMakeLists.txt
include/: calculator.h  checker.h  data.h  parser.h  printer.h  runner.h
src/: calculator.cpp  checker.cpp  main.cpp  parser.cpp  printer.cpp  runner.cpp
